--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -63,7 +63,7 @@
 <p>この最適化により、 <code>FPSModeVsyncOffMinimum</code> は不要となります。これは GPU 使用を抑えるのには有効でしたが、マウスカーソルを素早く動かしたときのパフォーマンスなどに問題がありました。 Ebitengine 2.5 では、型 <code>FPSModeType</code> とそれを使う API は非推奨になりました。代わりに、 <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetVsyncEnabled"><code>ebiten.SetVsyncEnabled</code></a> と <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#IsVsyncEnabled"><code>ebiten.IsVsyncEnabled</code></a> は非推奨ではなくなりました。</p>
 <h3>その他の新しい API</h3>
 <ul>
-  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScaleFormat"><code>type ebiten.ColorScaleFormat</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2365">#2365</a>)</li>
+  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ColorScaleMode"><code>type ebiten.ColorScaleMode</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2365">#2365</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#KeyName"><code>func ebiten.KeyName</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/1904">#1904</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#MouseButton0"><code>const ebiten.MouseButton0</code></a> - <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#MouseButton4"><code>const ebiten.MouseButton4</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2445">#2445</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Termination"><code>const ebiten.Termination</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2266">#2266</a>)</li>
