--- a/contents/ja/examples/index.html
+++ b/contents/ja/examples/index.html
@@ -89,6 +89,10 @@
     <p class="img thumbnail"><a href="isometric.html"><img src="/images/examples/isometric.png" width="320" height="240" alt="Isometric"></a></p>
   </div>
   <div class="grid-item-1">
+    <h3>Lines</h3>
+    <p class="img thumbnail"><a href="lines.html"><img src="/images/examples/lines.png" width="320" height="240" alt="Lines"></a></p>
+  </div>
+  <div class="grid-item-1">
     <h3>Masking</h3>
     <p class="img thumbnail"><a href="masking.html"><img src="/images/examples/masking.png" width="320" height="240" alt="Masking"></a></p>
   </div>
