--- a/contents/ja/examples/nav.html
+++ b/contents/ja/examples/nav.html
@@ -25,6 +25,7 @@
   <li><a href="drag.html">Drag &amp; Drop</a></li>
   <li><a href="highdpi.html">Hi-DPI</a></li>
   <li><a href="isometric.html">Isometric</a></li>
+  <li><a href="lines.html">Lines</a></li>
   <li><a href="masking.html">Masking</a></li>
   <li><a href="paint.html">Paint</a></li>
   <li><a href="perspective.html">Perspective</a></li>
