contents/en/documents/to_v2: remove dead links

--- a/contents/en/documents/to_v2.html
+++ b/contents/en/documents/to_v2.html
@@ -20,7 +20,7 @@
 </ul>
 <h2>Platforms</h2>
 <ul>
-  <li><a href="/en/documents/gopherjs.html">GopherJS</a> is no longer supported as of v2. Use <a href="/en/documents/webassembly.html">WebAssembly</a> instead.</li>
+  <li>GopherJS is no longer supported as of v2. Use <a href="/en/documents/webassembly.html">WebAssembly</a> instead.</li>
 </ul>
 <h2>Action items</h2>
 <h3>Updating the import paths</h2>
