--- a/contents/ja/documents/to_v2.html
+++ b/contents/ja/documents/to_v2.html
@@ -20,7 +20,7 @@
 </ul>
 <h2>プラットフォーム</h2>
 <ul>
-  <li><a href="/en/documents/gopherjs.html">GopherJS</a> は v2 からサポートされません。代わりに <a href="/ja/documents/webassembly.html">WebAssembly</a> を使用してください。</li>
+  <li>GopherJS は v2 からサポートされません。代わりに <a href="/ja/documents/webassembly.html">WebAssembly</a> を使用してください。</li>
 </ul>
 <h2>やることリスト</h2>
 <h3>インポートパスの更新</h2>
