contents/en/documents: fix URL

--- a/contents/en/documents/faq.html
+++ b/contents/en/documents/faq.html
@@ -12,7 +12,7 @@
 <p>Yes and no. If the target is Windows or Wasm, yes. Otherwise, it is almost impossible to cross-compile due to Cgo unfortunately. See also <a href="https://github.com/golang/go/issues/18296">Go issue #18296</a>.</p>
 <h2>Graphics</h2>
 <h3>How to draw lines?</h3>
-<p>Use <a href="http://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil#DrawLine"><code>ebitenutil.DrawLine</code></a>. Note that this function is only for debugging and prototyping only.</p>
+<p>Use <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil#DrawLine"><code>ebitenutil.DrawLine</code></a>. Note that this function is only for debugging and prototyping only.</p>
 <p>See <a href="https://github.com/hajimehoshi/ebiten/issues/137">the discussion #137</a> on other primitive drawings.</p>
 <h3>How to take a screenshot?</h3>
 <p>Specify the key to environment variable <code>EBITEN_SCREENSHOT_KEY</code> and you can take a screenshot by pressing the specified key.</p>
