contents/en/documents/2.5: v2.5.1 released

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -126,3 +126,9 @@
   <li>The build tag <code>example</code> is no longer required for the examples (<a href="https://github.com/hajimehoshi/ebiten/issues/1462">#1462</a>).</li>
   <li>The package <code>text</code> now considers hinting. <code>text</code> tries to create glyphs with considering sub-pixel shifts, in the case when a font face doesn't use hinting (<a href="https://github.com/hajimehoshi/ebiten/issues/2469">#2469</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2528">#2528</a>).</li>
 </ul>
+<h2>v2.5.1</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/108?closed=1">Issues for v2.5.1</a></p>
+<ul>
+  <li>An Ebitengine application with <code>ebiten.SetRunnableOnUnfocused(false)</code> didn't start on macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/2620">#2620</a>).</li>
+</ul>
