--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -126,3 +126,9 @@
   <li>サンプルのためのビルドタグ <code>example</code> は不要になりました (<a href="https://github.com/hajimehoshi/ebiten/issues/1462">#1462</a>)。</li>
   <li>パッケージ <code>text</code> がヒンティングを考慮する用になりました。 <code>text</code> は、フォントがヒンティングを使用しない場合のために、サブピクセルのずれを考慮したグリフを作るようになりました (<a href="https://github.com/hajimehoshi/ebiten/issues/2469">#2469</a>、 <a href="https://github.com/hajimehoshi/ebiten/issues/2528">#2528</a>)。</li>
 </ul>
+<h2>v2.5.1</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/108?closed=1">Issues for v2.5.1</a></p>
+<ul>
+  <li>macOS 上で、 <code>ebiten.SetRunnableOnUnfocused(false)</code> を呼び出す Ebitengine アプリケーションが起動しなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2620">#2620</a>)。</li>
+</ul>
