--- a/contents/ja/documents/matrix.html
+++ b/contents/ja/documents/matrix.html
@@ -91,7 +91,7 @@
   =
   \begin{bmatrix}
   1 \cdot x + 0 \cdot y \\
-  0 \cdot y + 1 \cdot y \\
+  0 \cdot x + 1 \cdot y \\
   \end{bmatrix}
   =
   \begin{bmatrix}
