contents/en/documents/2.5: v2.5.2 Released

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -132,3 +132,9 @@
 <ul>
   <li>An Ebitengine application with <code>ebiten.SetRunnableOnUnfocused(false)</code> didn't start on macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/2620">#2620</a>).</li>
 </ul>
+<h2>v2.5.2</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/109?closed=1">Issues for v2.5.2</a></p>
+<ul>
+  <li>A mouse cursor position was not correct with <code>CursorModeCapture</code> on Web browsers (<a href="https://github.com/hajimehoshi/ebiten/issues/2634">#2634</a>).</li>
+</ul>
