--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -132,3 +132,9 @@
 <ul>
   <li>macOS 上で、 <code>ebiten.SetRunnableOnUnfocused(false)</code> を呼び出す Ebitengine アプリケーションが起動しなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2620">#2620</a>)。</li>
 </ul>
+<h2>v2.5.2</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/109?closed=1">Issues for v2.5.2</a></p>
+<ul>
+  <li>Web ブラウザで、 <code>CursorModeCapture</code> を使用したときにマウスカーソルの位置が正しくなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2634">#2634</a>).</li>
+</ul>
