contents/en/documents/shader: update

--- a/contents/en/documents/shader.html
+++ b/contents/en/documents/shader.html
@@ -67,7 +67,7 @@ func Fragment(position vec4, texCoord vec2, color vec4) vec4 {
 <p>Kage doesn't have these Go's features so far.</p>
 <ul>
   <li>Most types (<code>rune</code>, <code>string</code>, numeric types except for <code>int</code>, <code>interface</code>, slices, pointers, structs, function types, channels)</li>
-  <li>Built-in functions except for <code>len</code> (e.g., <code>new</code>, <code>make</code>, <code>panic</code>)</li>
+  <li>Built-in functions except for some functions like <code>len</code> (e.g., <code>new</code>, <code>make</code>, <code>panic</code>)</li>
   <li>New type definition with <code>type</code></li>
   <li>Structs</li>
   <li><code>import</code></li>
