--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -67,7 +67,7 @@ func Fragment(position vec4, texCoord vec2, color vec4) vec4 {
 <p>Kage には現在 Go の以下の機能がありません。</p>
 <ul>
   <li>ほとんどの型 (<code>rune</code>、 <code>string</code>、 <code>int</code> を除く数値型、 <code>interface</code>、スライス、ポインタ、構造体、関数型、チャネル)</li>
-  <li><code>len</code> 以外の組み込み関数 (<code>new</code>、 <code>make</code>、 <code>panic</code> など)</li>
+  <li><code>len</code> などのいくつかの関数以外の組み込み関数 (<code>new</code>、 <code>make</code>、 <code>panic</code> など)</li>
   <li><code>type</code> による新しい型の定義</li>
   <li>構造体</li>
   <li><code>import</code></li>
