contents/en/documents/2.5: v2.5.3 released

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -138,3 +138,9 @@
 <ul>
   <li>A mouse cursor position was not correct with <code>CursorModeCapture</code> on Web browsers (<a href="https://github.com/hajimehoshi/ebiten/issues/2634">#2634</a>).</li>
 </ul>
+<h2>v2.5.3</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/110?closed=1">Issues for v2.5.3</a></p>
+<ul>
+  <li>In Kage, a swizzling component <code>r</code> for a <code>vec2</code> couldn't be compiled (<a href="https://github.com/hajimehoshi/ebiten/issues/2652">#2652</a>).</li>
+</ul>
