--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -138,3 +138,9 @@
 <ul>
   <li>Web ブラウザで、 <code>CursorModeCapture</code> を使用したときにマウスカーソルの位置が正しくなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2634">#2634</a>).</li>
 </ul>
+<h2>v2.5.3</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/110?closed=1">Issues for v2.5.3</a></p>
+<ul>
+  <li>Kage で <code>vec2</code> に対する Swizzling の要素 <code>r</code> がコンパイルできなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2652">#2652</a>)。</li>
+</ul>
