--- a/contents/index.html
+++ b/contents/index.html
@@ -66,6 +66,12 @@
       <figcaption><a href="https://odencat.com/">Odencat Inc.</a><br>(Works: <a href="https://odencat.com/bearsrestaurant/switch/en.html">Bear's Restaurant</a>, <a href="https://odencat.com/fishingparadiso/en.html">Fishing Paradiso</a>, <a href="https://odencat.com/en/game/mousebusters/">Mousebusters</a>, <a href="https://odencat.com/bakemono/">Meg's Monster</a>, etc.)</figcaption>
     </figure>
   </div>
+  <div class="grid-item-2">
+    <figure>
+      <p class="img avatar"><a href="https://symbolic.software/"><img src="/images/symbolic_software.jpg" width="168"></a></p>
+      <figcaption><a href="https://symbolic.software/">Symbolic Software</a><br>(Works: <a href="https://drkobushi.com">Dr. Kobushi's Labyrinthine Laboratory</a>)</figcaption>
+    </figure>
+  </div>
 </div>
 <h3>Silver</h3>
 <div class="grid-container">
