contents/en/documents/install: fix tags

--- a/contents/en/documents/install.html
+++ b/contents/en/documents/install.html
@@ -62,7 +62,7 @@
 <pre><code>go run github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
 <p>If you see this window with a rotating Gophers image, congratulations! You have a correct environment to use Ebitengine!</p>
 <p class="img thumbnail"><img src="/images/rotate.png" width="320" height="240" alt="Rotate example"></p>
-<div data-tags="linux">
+<div data-tags="linux windows">
   <p>If you are using the Windows Subsystem for Linux (WSL), you must set the environment variable <code>GOOS=windows</code> when executing the <code>go run</code> command.</p>
   <pre><code>GOOS=windows go run github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
 </div>
