--- a/contents/ja/documents/install.html
+++ b/contents/ja/documents/install.html
@@ -62,7 +62,7 @@
 <pre><code>go run github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
 <p>回転する Gopher の絵がウィンドウ上に表示されたならば、おめでとうございます! Ebitengine を動かすための正しい環境が整いました。</p>
 <p class="img thumbnail"><img src="/images/rotate.png" width="320" height="240" alt="Rotate example"></p>
-<div data-tags="linux">
+<div data-tags="linux windows">
   <p>Linux 用 Windows サブシステム (WSL)を使用している場合は、<code>go run</code> コマンド実行時に環境変数 <code>GOOS=windows</code> を設定する必要があります。</p>
   <pre><code>GOOS=windows go run github.com/hajimehoshi/ebiten/v2/examples/rotate@latest</code></pre>
 </div>
