contents/en/documents/2.5: v2.5.4 released

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -144,3 +144,9 @@
 <ul>
   <li>In Kage, a swizzling component <code>r</code> for a <code>vec2</code> couldn't be compiled (<a href="https://github.com/hajimehoshi/ebiten/issues/2652">#2652</a>).</li>
 </ul>
+<h2>v2.5.4</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/111?closed=1">Issues for v2.5.4</a></p>
+<ul>
+  <li>There were wrong <code>position</code> usages in the <code>shader</code> example (<a href="https://github.com/hajimehoshi/ebiten/issues/2638">#2638</a>).</li>
+</ul>
