--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -144,3 +144,9 @@
 <ul>
   <li>Kage で <code>vec2</code> に対する Swizzling の要素 <code>r</code> がコンパイルできなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2652">#2652</a>)。</li>
 </ul>
+<h2>v2.5.4</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/111?closed=1">Issues for v2.5.4</a></p>
+<ul>
+  <li><code>shader</code> サンプル内で <code>position</code> の使用方法が間違っていたのを修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2638">#2638</a>)。</li>
+</ul>
