contents/en/documents/2.5: v2.5.5 released

--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -150,3 +150,10 @@
 <ul>
   <li><code>shader</code> サンプル内で <code>position</code> の使用方法が間違っていたのを修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2638">#2638</a>)。</li>
 </ul>
+<h2>v2.5.5</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/112?closed=1">Issues for v2.5.5</a></p>
+<ul>
+  <li>iOS アプリケーションが稀にクラッシュしていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2679">#2679</a>)。</li>
+  <li><code>ebiten.AppendInputChars</code> が Android 上で正しく動いていなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2682">#2682</a>、 <a href="https://github.com/hajimehoshi/ebiten/issues/2684">#2684</a>)。</li>
+</ul>
