--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -150,3 +150,10 @@
 <ul>
   <li>There were wrong <code>position</code> usages in the <code>shader</code> example (<a href="https://github.com/hajimehoshi/ebiten/issues/2638">#2638</a>).</li>
 </ul>
+<h2>v2.5.5</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/112?closed=1">Issues for v2.5.5</a></p>
+<ul>
+  <li>Fixed a rare crash on an iOS application (<a href="https://github.com/hajimehoshi/ebiten/issues/2679">#2679</a>).</li>
+  <li>Fixed an issue where <code>ebiten.AppendInputChars</code> didn't work correctly on Android (<a href="https://github.com/hajimehoshi/ebiten/issues/2682">#2682</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2684">#2684</a>).</li>
+</ul>
