--- a/contents/en/examples/nav.html
+++ b/contents/en/examples/nav.html
@@ -21,6 +21,7 @@
 <h3>Graphics (Advanced)</h3>
 <ul>
   <li><a href="airship.html">Airship</a></li>
+  <li><a href="blend.html">Blend</a></li>
   <li><a href="chipmunk.html">Chipmunk Physics</a></li>
   <li><a href="drag.html">Drag &amp; Drop</a></li>
   <li><a href="highdpi.html">Hi-DPI</a></li>
