--- a/contents/ja/examples/index.html
+++ b/contents/ja/examples/index.html
@@ -73,6 +73,10 @@
     <p class="img thumbnail"><a href="airship.html"><img src="/images/examples/airship.png" width="320" height="240" alt="Airship"></a></p>
   </div>
   <div class="grid-item-1">
+    <h3>Blend</h3>
+    <p class="img thumbnail"><a href="blend.html"><img src="/images/examples/blend.png" width="320" height="240" alt="Blend"></a></p>
+  </div>
+  <div class="grid-item-1">
     <h3>Chipmunk Physics</h3>
     <p class="img thumbnail"><a href="chipmunk.html"><img src="/images/examples/chipmunk.png" width="320" height="240" alt="Chipmunk Physics"></a></p>
   </div>
