--- a/contents/en/documents/install.html
+++ b/contents/en/documents/install.html
@@ -42,9 +42,9 @@
   <h2>Installing dependencies</h2>
   <div data-tags="linux">
     <h3>Debian / Ubuntu</h3>
-    <pre><code>sudo apt install libc6-dev libglu1-mesa-dev libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev libasound2-dev pkg-config</code></pre>
+    <pre><code>sudo apt install libc6-dev libgl1-mesa-dev libxcursor-dev libxi-dev libxinerama-dev libxrandr-dev libxxf86vm-dev libasound2-dev pkg-config</code></pre>
     <h3>Fedora</h3>
-    <pre><code>sudo dnf install mesa-libGLU-devel mesa-libGLES-devel libXrandr-devel libXcursor-devel libXinerama-devel libXi-devel libXxf86vm-devel alsa-lib-devel pkg-config</code></pre>
+    <pre><code>sudo dnf install mesa-libGL-devel mesa-libGLES-devel libXrandr-devel libXcursor-devel libXinerama-devel libXi-devel libXxf86vm-devel alsa-lib-devel pkg-config</code></pre>
     <h3>Solus</h3>
     <pre><code>sudo eopkg install libglu-devel libx11-devel libxrandr-devel libxinerama-devel libxcursor-devel libxi-devel libxxf86vm-devel alsa-lib-devel pkg-config</code></pre>
     <h3>Arch</h3>
