--- a/contents/en/documents/install.html
+++ b/contents/en/documents/install.html
@@ -46,7 +46,7 @@
     <h3>Fedora</h3>
     <pre><code>sudo dnf install mesa-libGL-devel mesa-libGLES-devel libXrandr-devel libXcursor-devel libXinerama-devel libXi-devel libXxf86vm-devel alsa-lib-devel pkg-config</code></pre>
     <h3>Solus</h3>
-    <pre><code>sudo eopkg install libglu-devel libx11-devel libxrandr-devel libxinerama-devel libxcursor-devel libxi-devel libxxf86vm-devel alsa-lib-devel pkg-config</code></pre>
+    <pre><code>sudo eopkg install libglvnd-devel libx11-devel libxrandr-devel libxinerama-devel libxcursor-devel libxi-devel libxxf86vm-devel alsa-lib-devel pkg-config</code></pre>
     <h3>Arch</h3>
     <pre><code>sudo pacman -S mesa libxrandr libxcursor libxinerama libxi pkg-config</code></pre>
     <h3>Alpine</h3>
