contents/en/documents/2.5: v2.5.6 released

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -157,3 +157,9 @@
   <li>Fixed a rare crash on an iOS application (<a href="https://github.com/hajimehoshi/ebiten/issues/2679">#2679</a>).</li>
   <li>Fixed an issue where <code>ebiten.AppendInputChars</code> didn't work correctly on Android (<a href="https://github.com/hajimehoshi/ebiten/issues/2682">#2682</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2684">#2684</a>).</li>
 </ul>
+<h2>v2.5.6</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/113?closed=1">Issues for v2.5.6</a></p>
+<ul>
+  <li>Fixed an issue that caused crashes on macOS in Go 1.21 (<a href="https://github.com/hajimehoshi/ebiten/issues/2700">#2700</a>).</li>
+</ul>
