--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -157,3 +157,9 @@
   <li>iOS アプリケーションが稀にクラッシュしていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2679">#2679</a>)。</li>
   <li><code>ebiten.AppendInputChars</code> が Android 上で正しく動いていなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2682">#2682</a>、 <a href="https://github.com/hajimehoshi/ebiten/issues/2684">#2684</a>)。</li>
 </ul>
+<h2>v2.5.6</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/113?closed=1">Issues for v2.5.6</a></p>
+<ul>
+  <li>Go1.21でmacOS上でクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2700">#2700</a>)。</li>
+</ul>
