contents/en/documents/2.5: v2.5.7 released

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -163,3 +163,9 @@
 <ul>
   <li>Fixed an issue that caused crashes on macOS in Go 1.21 (<a href="https://github.com/hajimehoshi/ebiten/issues/2700">#2700</a>).</li>
 </ul>
+<h2>v2.5.7</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/114?closed=1">Issues for v2.5.7</a></p>
+<ul>
+  <li>Fixed performance issues caused by overflow on 32-bit machines (<a href="https://github.com/hajimehoshi/ebiten/issues/2728">#2728</a>).</li>
+</ul>
