--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -161,5 +161,11 @@
 <h3>バグ修正</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/113?closed=1">Issues for v2.5.6</a></p>
 <ul>
-  <li>Go1.21でmacOS上でクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2700">#2700</a>)。</li>
+  <li>Go 1.21 で macOS 上でクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2700">#2700</a>)。</li>
+</ul>
+<h2>v2.5.7</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/114?closed=1">Issues for v2.5.7</a></p>
+<ul>
+  <li>32bit マシンでの、オーバーフローによるパフォーマンス問題を修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2728">#2728</a>)。</li>
 </ul>
