_site/images: update the logo of Symbolic Software

--- a/contents/index.html
+++ b/contents/index.html
@@ -68,7 +68,7 @@
   </div>
   <div class="grid-item-2">
     <figure>
-      <p class="img avatar"><a href="https://symbolic.software/"><img src="/images/symbolic_software.jpg" width="168"></a></p>
+      <p class="img avatar"><a href="https://symbolic.software/"><img src="/images/symbolic_software.png" width="168"></a></p>
       <figcaption><a href="https://symbolic.software/">Symbolic Software</a><br>(Works: <a href="https://drkobushi.com">Dr. Kobushi's Labyrinthine Laboratory</a>)</figcaption>
     </figure>
   </div>
