--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -68,7 +68,7 @@
   </div>
   <div class="grid-item-2">
     <figure>
-      <p class="img avatar"><a href="https://symbolic.software/"><img src="/images/symbolic_software.jpg" width="168"></a></p>
+      <p class="img avatar"><a href="https://symbolic.software/"><img src="/images/symbolic_software.png" width="168"></a></p>
       <figcaption><a href="https://symbolic.software/">Symbolic Software</a><br>(作品: <a href="https://drkobushi.com">こぶし博士の迷宮研究所</a>)</figcaption>
     </figure>
   </div>
