--- a/tmpl.html
+++ b/tmpl.html
@@ -43,6 +43,7 @@
         <li><a href="/en/tour/">Tour (WIP)</a></li>
         <li><a href="/en/documents/">Documents</a></li>
         <li><a href="/en/examples/">Examples</a></li>
+        <li><a href="/en/showcase.html">Showcase</a></li>
         <li><a href="/en/blog/">Blog</a></li>
         <li><a href="/en/contact.html">Contact Us</a></li>{{ end }}
         {{ if eq .Lang "ja" }}<li><a href="{{ .Top }}">ホーム</a></li>
@@ -51,6 +52,7 @@
         <li><a href="/ja/tour/">ツアー (未完成)</a></li>
         <li><a href="/ja/documents/">ドキュメント</a></li>
         <li><a href="/ja/examples/">サンプル</a></li>
+        <li><a href="/ja/showcase.html">ショーケース</a></li>
         <li><a href="/ja/blog/">ブログ</a></li>
         <li><a href="/ja/contact.html">連絡先</a></li>{{ end }}
       </ul>
