contsnts/en/documents: add 2.6.html

--- a/contents/ja/documents/index.html
+++ b/contents/ja/documents/index.html
@@ -12,6 +12,7 @@
 </ul>
 <h2>リリースノート</h2>
 <ul>
+  <li><a href="./2.6.html">2.6</a></li>
   <li><a href="./2.5.html">2.5</a></li>
   <li><a href="./2.4.html">2.4</a></li>
   <li><a href="./2.3.html">2.3</a></li>
