--- a/contents/ja/documents/nav.html
+++ b/contents/ja/documents/nav.html
@@ -12,6 +12,7 @@
 </ul>
 <h3>リリースノート</h3>
 <ul>
+  <li><a href="./2.6.html">2.6</a></li>
   <li><a href="./2.5.html">2.5</a></li>
   <li><a href="./2.4.html">2.4</a></li>
   <li><a href="./2.3.html">2.3</a></li>
