--- a/contents/en/documents/shader.html
+++ b/contents/en/documents/shader.html
@@ -16,17 +16,17 @@ var ScreenSize vec2
 
 // Fragment is the entry point of the fragment shader.
 // Fragment returns the color value for the current position.
-func Fragment(position vec4, texCoord vec2, color vec4) vec4 {
+func Fragment(dstPos vec4, srcPos vec2, color vec4) vec4 {
 	// You can define variables with a short variable declaration like Go.
 	lightpos := vec3(Cursor, 50)
-	lightdir := normalize(lightpos - position.xyz)
-	normal := normalize(imageSrc1UnsafeAt(texCoord) - 0.5)
+	lightdir := normalize(lightpos - dstPos.xyz)
+	normal := normalize(imageSrc1UnsafeAt(srcPos) - 0.5)
 	ambient := 0.25
 	diffuse := 0.75 * max(0.0, dot(normal.xyz, lightdir))
 
 	// You can treat multiple source images by
 	// imageSrc[N]At or imageSrc[N]UnsafeAt.
-	return imageSrc0UnsafeAt(texCoord) * (ambient + diffuse)
+	return imageSrc0UnsafeAt(srcPos) * (ambient + diffuse)
 }</code></pre>
 <p class="img"><video controls autoplay src="/images/documents/shader/lighting.mp4" width="456"></p>
 <h2>Ebitengine API</h2>
@@ -81,11 +81,11 @@ func Fragment(position vec4, texCoord vec2, color vec4) vec4 {
 </ul>
 <h3>Entry point</h3>
 <p>Kage can define only a fragment shader. The <code>Fragment</code> function with the below signature is the entrypoint.</p>
-<pre><code>func Fragment(position vec4, texCoord vec2, color vec4) vec4</code></pre>
+<pre><code>func Fragment(dstPos vec4, srcPos vec2, color vec4) vec4</code></pre>
 <table>
   <tr><th>Name</th><th>Type</th><th>Description</th></tr>
-  <tr><td><code>position</code></td><td><code>vec4</code><td>The destination position in pixels. The 3rd and 4th components are always 0 and 1.</td></tr>
-  <tr><td><code>texCoord</code></td><td><code>vec2</code><td>The source texture's position in texels.</td></tr>
+  <tr><td><code>dstPos</code></td><td><code>vec4</code><td>The destination position in pixels. The 3rd and 4th components are always 0 and 1.</td></tr>
+  <tr><td><code>srcPos</code></td><td><code>vec2</code><td>The source texture's position in texels.</td></tr>
   <tr><td><code>color</code></td><td><code>vec4</code><td>Supplemental color information given from vertices. Each component values are in between 0 and 1. This value is meaningful only when <code>DrawTrianglesShader</code> is used.</td></tr>
   <tr><td>(Returning value)</td><td><code>vec4</code><td>The current position's color. Each component values are in between 0 and 1.</td></tr>
 </table>
