--- a/contents/ja/documents/2.5.html
+++ b/contents/ja/documents/2.5.html
@@ -183,3 +183,11 @@
 <ul>
   <li><code>ebiten.RunGame</code> を呼ぶ前に <code>ebiten.SetCursorMode</code> などを別 goroutine から呼び出したときにクラッシュすることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2742">#2742</a>)。</li>
 </ul>
+<h2>v2.5.10</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/117?closed=1">Issues for v2.5.10</a></p>
+<ul>
+  <li>iOS アプリケーションで <code>EbitenViewController</code> の <code>view</code> プロパティにアクセスするとフリーズすることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2768">#2768</a>)。</li>
+  <li>Xcode 15 で iOS アプリケーションのビルドができなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2772">#2772</a>)。</li>
+  <li>iOS 17 で音を再生するときにクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2773">#2773</a>)。</li>
+</ul>
