contents/en/documents/2.5: add a link

--- a/contents/en/documents/2.5.html
+++ b/contents/en/documents/2.5.html
@@ -185,6 +185,7 @@
 </ul>
 <h2>v2.5.10</h2>
 <h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/117?closed=1">Issues for v2.5.10</a></p>
 <ul>
   <li>Fixed an issue where accessing the <code>view</code> property of <code>EbitenViewController</code> in iOS applications could cause freezing (<a href="https://github.com/hajimehoshi/ebiten/issues/2768">#2768</a>).</li>
   <li>Fixed an issue where iOS applications could not be built in Xcode 15 (<a href="https://github.com/hajimehoshi/ebiten/issues/2772">#2772</a>).</li>
